testing/error/error7.inp
* I II III J V ABC"
Setting contains something not in alphabet
